# NeuroPySIM

./: .gitignore  Adder.py  AdderTree.py  Array.py  Buffer.py  Chip.py  DFF.py  Decoder.py  DecoderDriver.py  MemCell.py  MultilevelSAEncoder.py  MultilevelSenseAmp.py  Mux.py  NewSwitchMatrix.py  Param.py  README.md  ShiftAdd.py  SwitchMatrix.py  Tile.py  WLNewDecoderDriver.py  constant.py  gate_calculator.py  inferenceConfig.py  inference_sim.py  main.py
from_neurosim/: CMakeLists.txt  Param.cpp  Param.h  PyBindTest.py  bindings.cpp  parse_vars.py
layer_record_LeNet5/: inputConv0_.csv  inputConv1_.csv  inputFC2_.csv  inputFC3_.csv  inputFC4_.csv  weightConv0_.csv  weightConv1_.csv  weightFC2_.csv  weightFC3_.csv  weightFC4_.csv
layer_record_VGG8/: inputConv6_.csv  inputFC0_.csv  inputFC17_.csv  inputFC1_.csv  weightFC17_.csv
log/default/: test_log2025_02_12_11_02_11
models/: DenseNet.py  LeNet.py  ResNet18.py  VGG.py  ViT.py  dataset.py
modules/: floatrange_cpu_np_infer.py  quantization_RRAM.py  quantization_cpu_np_infer.py
utee/: hook.py  misc.py  wage_initializer.py  wage_quantizer.py
